# StratGuard-AI

./: .gitignore  CONTRIBUTORS.md  Dockerfile  README.md  Run-StratGuard-AI.bat  StratGuard-AI-Project-Design.md  render.yaml
backend/: pyproject.toml
backend/app/: __init__.py  ai.py  data.py  engine.py  main.py  metrics.py  models.py  reports.py  store.py  validation.py
backend/stratguard_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_ai.py  test_api.py  test_data.py  test_engine.py
docs/: build-sequence.md  demo-script.md  devpost-description.md  verification-2026-07-19.md
docs/superpowers/plans/: 2026-07-19-stratguard-ai-mvp.md  2026-07-19-stratguard-portfolio-redesign.md
docs/superpowers/specs/: 2026-07-19-stratguard-portfolio-redesign.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/components/: EvidenceDashboard.tsx  Hero.tsx  ReviewPanel.tsx
